apps/base/media-playback/dispatcharr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dispatcharr-prod-ingress
  namespace: media-playback
  labels:
    app: dispatcharr
spec:
  ingressClassName: nginx
  rules:
  - host: "dispatcharr.home.arpa"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dispatcharr-prod-svc
            port:
              number: 9191
